RESOLVED FIXED 216558
[GStreamer][1.18] Regressions
https://bugs.webkit.org/show_bug.cgi?id=216558
Summary [GStreamer][1.18] Regressions
Philippe Normand
Reported 2020-09-15 09:23:42 PDT
A few things to fix before landing https://bugs.webkit.org/show_bug.cgi?id=216270
Attachments
Patch (6.09 KB, patch)
2020-09-15 10:51 PDT, Philippe Normand
calvaris: review+
Philippe Normand
Comment 1 2020-09-15 10:51:23 PDT
Philippe Normand
Comment 2 2020-09-16 00:08:29 PDT
Radar WebKit Bug Importer
Comment 3 2020-09-16 00:09:16 PDT
Note You need to log in before you can comment on or make changes to this bug.